# ccxt-pg

./: README.md  pyproject.toml
src/ccxt_pg/: __init__.py  core.py  functions.py
src/ccxt_pg/utils/: db_creation.py  helpers.py  query_loader.py
src/ccxt_pg/utils/queries/: create_public_trades_table.sql
