[project]
name = "ccxt-pg"
version = "0.1.0"
description = "A helper library to facilitate exporting CCXT-formatted data to a postgres database."
readme = "README.md"
authors = [
    { name = "Yann", email = "yann.wallis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
